change background to pure dark color

--- a/index.html
+++ b/index.html
@@ -547,15 +547,11 @@
 						</a>
 				</li>
 			</ul>
-			</li>
-			</ul>
 		</div>
 
 		<!-- Copy Right -->
 		<footer class="footer-section">
-			<ul class="copyright">
-				<li>Copyright &copy; Xu Cai 2025</li>
-			</ul>
+			<p class="copyright">Copyright &copy; Xu Cai 2025</p>
 		</footer>
 
 	</section>
