resume button added with google drive url

--- a/index.html
+++ b/index.html
@@ -31,14 +31,18 @@
 					Eager to leverage my expertise in Computer Science as a powerful tool to contribute to meaningful
 					advancements.
 				</p>
+			</div>
+
+			<div class="discover-and-resume">
 				<button>
 					<a href="#about-me">Discover</a>
 				</button>
-				<!-- <button>
-					<a href="#about-me">Resume</a>
-				</button> -->
-
+				<button>
+					<a href="https://drive.google.com/file/d/1lw0ibnoxjES5S8bWIFpgiQCJynHe9mTM/view?usp=sharing"
+						target="_blank">Resume</a>
+				</button>
 			</div>
+
 		</div>
 
 
